# platform_system_core

./: CMakeLists.txt  README
diagnose_usb/: CMakeLists.txt
fastboot/: CMakeLists.txt  fastboot.cpp
libcutils/: CMakeLists.txt
liblog/: CMakeLists.txt
libsparse/: CMakeLists.txt
other/avb/: CMakeLists.txt
other/libbase/: CMakeLists.txt
other/libziparchive/: CMakeLists.txt
